As its now, it can not work properly.
The installer uses realpath(), but the autoloader is
generated after installation. We would need custom
resolver that doesn't check files or links, just snipts
components away.

--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,5 @@
     "author_uri": "http://rahforum.biz",
     "order": 1,
     "flags": 0,
-    "help": {"file" : ["./README.textile"]},
-    "code": {"file" : ["./../../autoload.php"]}
+    "help": {"file" : ["./README.textile"]}
 }
