--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,11 @@
     "version": "0.3.1",
     "type": 5,
     "author": "Jukka Svahn",
-    "author_uri": "http://rahforum.biz",
+    "author_uri": "https://rahforum.biz",
     "order": 1,
     "flags": 0,
-    "help": {"file" : ["./README.textile"]}
+    "help": {"file" : ["./README.textile"]},
+    "code": {"file" : [
+        "./src/Index.php"
+    ]}
 }
