--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Jukka Svahn",
-            "homepage": "http://rahforum.biz",
+            "homepage": "https://rahforum.biz",
             "role": "Developer"
         }
     ],
