--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
 
         steps:
             -   name: Checkout
-                uses: actions/checkout@v2
+                uses: actions/checkout@v3
 
             -   name: Build
                 id: build
@@ -21,28 +21,18 @@ jobs:
             -   name: Changelog
                 id: changelog
                 run: |
-                    contents="$(sed -e '1,/h2. Changelog/d' README.textile | sed -e '1,/h3./d' -e '/h3./,$d')"
-                    contents="${contents//'%'/'%25'}"
-                    contents="${contents//$'\n'/'%0A'}"
-                    contents="${contents//$'\r'/'%0D'}"
-                    echo "::set-output name=contents::$contents"
+                    echo "contents<<CHANGELOGEOF" >> $GITHUB_OUTPUT
+                    sed -e '1,/h2. Changelog/d' README.textile | sed -e '1,/h3./d' -e '/h3./,$d' >> $GITHUB_OUTPUT
+                    echo "CHANGELOGEOF" >> $GITHUB_OUTPUT
 
             -   name: Create Release
                 id: create_release
-                uses: actions/create-release@master
-                env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                uses: shogo82148/actions-create-release@v1
                 with:
-                    tag_name: ${{ github.ref }}
-                    release_name: ${{ github.ref }}
                     body: ${{ steps.changelog.outputs.contents }}
-                    draft: false
-                    prerelease: false
 
             -   name: Upload Compressed Plugin Installer
-                uses: actions/upload-release-asset@v1.0.1
-                env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                uses: shogo82148/actions-upload-release-asset@v1
                 with:
                     upload_url: ${{ steps.create_release.outputs.upload_url }}
                     asset_path: ${{ github.workspace }}/${{ steps.build.outputs.compressed }}
@@ -50,9 +40,7 @@ jobs:
                     asset_content_type: text/plain
 
             -   name: Upload Uncompressed Plugin Installer
-                uses: actions/upload-release-asset@v1.0.1
-                env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                uses: shogo82148/actions-upload-release-asset@v1
                 with:
                     upload_url: ${{ steps.create_release.outputs.upload_url }}
                     asset_path: ${{ github.workspace }}/${{ steps.build.outputs.uncompressed }}
